--- a/Junior/Junior.Web/Web.config
+++ b/Junior/Junior.Web/Web.config
@@ -5,16 +5,12 @@
   -->
 <configuration>
   <configSections>
-    
+
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
-  <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 --></configSections>
+    <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
+  </configSections>
   <connectionStrings>
-    <add name="DatabaseContext"
-         connectionString="Data Source=(localdb)\MSSQLLocalDB; 
-         Initial Catalog=Chemistry; 
-         Integrated Security=True;
-         MultipleActiveResultSets=True;"
-      providerName="System.Data.SqlClient" />
+    <add name="DatabaseContext" connectionString="Data Source=(localdb)\MSSQLLocalDB;Initial Catalog=Chemistry;           Integrated Security=True;          MultipleActiveResultSets=True;" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
