--- a/Junior/Junior.Web/Web.config
+++ b/Junior/Junior.Web/Web.config
@@ -30,7 +30,6 @@
     <compilation debug="true" targetFramework="4.7.2" />
     <httpRuntime targetFramework="4.7.1" />
     <httpModules>
-      <!--<add name="ApplicationInsightsWebTracking" type="Microsoft.ApplicationInsights.Web.ApplicationInsightsHttpModule, Microsoft.AI.Web" />-->
     </httpModules>
   </system.web>
   <runtime>
@@ -70,12 +69,8 @@
     </assemblyBinding>
   </runtime>
   <system.webServer>
-    <!--<modules>
-      <remove name="TelemetryCorrelationHttpModule" />
-      <add name="TelemetryCorrelationHttpModule" type="Microsoft.AspNet.TelemetryCorrelation.TelemetryCorrelationHttpModule, Microsoft.AspNet.TelemetryCorrelation" preCondition="integratedMode,managedHandler" />
-      <remove name="ApplicationInsightsWebTracking" />
-      <add name="ApplicationInsightsWebTracking" type="Microsoft.ApplicationInsights.Web.ApplicationInsightsHttpModule, Microsoft.AI.Web" preCondition="managedHandler" />
-    </modules>-->
+    <modules>
+    </modules>
     <validation validateIntegratedModeConfiguration="false" />
   </system.webServer>
   <system.codedom>
