--- a/Junior/Junior.WebAPI/packages.config
+++ b/Junior/Junior.WebAPI/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="AutoMapper" version="7.0.1" targetFramework="net472" />
   <package id="EntityFramework" version="6.2.0" targetFramework="net472" />
   <package id="Microsoft.AspNet.Cors" version="5.0.0" targetFramework="net472" />
   <package id="Microsoft.AspNet.WebApi.Client" version="5.2.6" targetFramework="net472" />
@@ -16,5 +17,6 @@
   <package id="Owin" version="1.0" targetFramework="net472" />
   <package id="Swashbuckle" version="5.6.0" targetFramework="net472" />
   <package id="Swashbuckle.Core" version="5.6.0" targetFramework="net472" />
+  <package id="System.ValueTuple" version="4.5.0" targetFramework="net472" />
   <package id="WebActivatorEx" version="2.0" targetFramework="net472" />
 </packages>
