--- a/Junior/Junior.DataAccessLayer/packages.config
+++ b/Junior/Junior.DataAccessLayer/packages.config
@@ -8,6 +8,7 @@
   <package id="Microsoft.Net.Http" version="2.0.20710.0" targetFramework="net472" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net472" />
   <package id="Newtonsoft.Json" version="7.0.1" targetFramework="net472" />
+  <package id="Serilog" version="2.7.1" targetFramework="net472" />
   <package id="System.ValueTuple" version="4.5.0" targetFramework="net472" />
   <package id="WebActivatorEx" version="2.0" targetFramework="net472" />
 </packages>
