--- a/Junior/Junior.Web/packages.config
+++ b/Junior/Junior.Web/packages.config
@@ -15,6 +15,9 @@
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net471" />
   <package id="Modernizr" version="2.8.3" targetFramework="net471" />
   <package id="Newtonsoft.Json" version="11.0.1" targetFramework="net471" />
+  <package id="Serilog" version="2.7.1" targetFramework="net472" />
+  <package id="Serilog.Sinks.File" version="3.2.0" targetFramework="net472" />
+  <package id="Serilog.Sinks.RollingFile" version="3.3.0" targetFramework="net472" />
   <package id="System.Diagnostics.DiagnosticSource" version="4.4.1" targetFramework="net471" />
   <package id="System.ValueTuple" version="4.5.0" targetFramework="net472" />
   <package id="WebGrease" version="1.6.0" targetFramework="net471" />
