--- a/Junior/Junior.WebAPI/packages.config
+++ b/Junior/Junior.WebAPI/packages.config
@@ -15,6 +15,9 @@
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net472" />
   <package id="Newtonsoft.Json" version="7.0.1" targetFramework="net472" />
   <package id="Owin" version="1.0" targetFramework="net472" />
+  <package id="Serilog" version="2.7.1" targetFramework="net472" />
+  <package id="Serilog.Sinks.File" version="3.2.0" targetFramework="net472" />
+  <package id="Serilog.Sinks.RollingFile" version="3.3.0" targetFramework="net472" />
   <package id="Swashbuckle" version="5.6.0" targetFramework="net472" />
   <package id="Swashbuckle.Core" version="5.6.0" targetFramework="net472" />
   <package id="System.ValueTuple" version="4.5.0" targetFramework="net472" />
