Implemented boiling point feature for compounds and elements

--- a/Junior/Junior.SharedModels/Junior.SharedModels.csproj
+++ b/Junior/Junior.SharedModels/Junior.SharedModels.csproj
@@ -42,12 +42,15 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="DtoModels\CompoundDto.cs" />
-    <Compile Include="DtoModels\CompoundElementDto.cs" />
+    <Compile Include="DtoModels\CompoundElementPartialDto.cs" />
     <Compile Include="DtoModels\ElementDto.cs" />
+    <Compile Include="DtoModels\ElementPartialDto.cs" />
     <Compile Include="DomainModels\Compound.cs" />
     <Compile Include="DomainModels\CompoundElement.cs" />
     <Compile Include="DomainModels\CompoundType.cs" />
     <Compile Include="DomainModels\Element.cs" />
+    <Compile Include="Dummy\Dummy.cs" />
+    <Compile Include="Enums\Enums.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup />
