--- a/Junior/Junior.DataAccessLayer/Junior.DataAccessLayer.csproj
+++ b/Junior/Junior.DataAccessLayer/Junior.DataAccessLayer.csproj
@@ -84,6 +84,10 @@
     <Compile Include="Migrations\201808161542360_Init.Designer.cs">
       <DependentUpon>201808161542360_Init.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201808170940268_AddedBoilingTemperature.cs" />
+    <Compile Include="Migrations\201808170940268_AddedBoilingTemperature.Designer.cs">
+      <DependentUpon>201808170940268_AddedBoilingTemperature.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repositories\CompoundRepository.cs" />
@@ -105,6 +109,9 @@
   <ItemGroup>
     <EmbeddedResource Include="Migrations\201808161542360_Init.resx">
       <DependentUpon>201808161542360_Init.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201808170940268_AddedBoilingTemperature.resx">
+      <DependentUpon>201808170940268_AddedBoilingTemperature.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
