--- a/Junior/Junior.Web/Junior.Web.csproj
+++ b/Junior/Junior.Web/Junior.Web.csproj
@@ -149,11 +149,14 @@
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="App_Start\SerilogConfig.cs" />
     <Compile Include="Controllers\CompoundController.cs" />
+    <Compile Include="Controllers\ElementController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Utility\CompoundCalculator.cs" />
+    <Compile Include="Utility\TemperatureConverter.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Content\bootstrap-theme.css" />
@@ -194,6 +197,7 @@
     <Content Include="Views\Compound\Create.cshtml" />
     <Content Include="Views\Compound\Edit.cshtml" />
     <Content Include="Views\Home\Index.cshtml" />
+    <Content Include="Views\Element\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
