--- a/Junior/Junior.DataAccessLayer/packages.config
+++ b/Junior/Junior.DataAccessLayer/packages.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="AutoMapper" version="7.0.1" targetFramework="net472" />
+  <package id="Bogus" version="23.0.2" targetFramework="net472" />
   <package id="EntityFramework" version="6.2.0" targetFramework="net472" />
   <package id="Microsoft.AspNet.WebApi.Client" version="4.0.20710.0" targetFramework="net472" />
   <package id="Microsoft.AspNet.WebApi.Core" version="4.0.20710.0" targetFramework="net472" />
