--- a/Junior/Junior.Tests/packages.config
+++ b/Junior/Junior.Tests/packages.config
@@ -14,5 +14,6 @@
   <package id="Serilog" version="2.7.1" targetFramework="net472" />
   <package id="Serilog.Sinks.File" version="3.2.0" targetFramework="net472" />
   <package id="Serilog.Sinks.RollingFile" version="3.3.0" targetFramework="net472" />
+  <package id="System.Threading.Tasks.Extensions" version="4.3.0" targetFramework="net472" />
   <package id="System.ValueTuple" version="4.5.0" targetFramework="net472" />
 </packages>
